force-app/main/default/objects/Campaign/fields/Event_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Event_Outcomes__c</fullName>
    <label>Event Outcomes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>