force-app/main/default/objects/Campaign/fields/Organisation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Record_Type__c</fullName>
    <label>Organisation Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>