force-app/main/default/objects/Campaign/recordTypes/Alumni.recordType-meta.xml
<RecordType>
    <fullName>Alumni</fullName>
    <active>true</active>
    <description>Used for Alumni &amp; Associate Engagement campaigns</description>
    <label>Community Participation</label>
</RecordType>