force-app/main/default/objects/Campaign/recordTypes/Bulk_Emailing.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Emailing</fullName>
    <active>true</active>
    <description>Used to send emails to contacts/leads</description>
    <label>Bulk Emailing</label>
</RecordType>