force-app/main/default/objects/Campaign/recordTypes/Direct_Mail.recordType-meta.xml
<RecordType>
    <fullName>Direct_Mail</fullName>
    <active>true</active>
    <description>Used for mailing and emailing campaigns</description>
    <label>Direct Mail</label>
</RecordType>