force-app/main/default/objects/Campaign/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Used for information sessions, career and trade fairs, conferences, student clubs and other events</description>
    <label>Event</label>
</RecordType>