force-app/main/default/objects/Campaign/recordTypes/Fundraising_Goal.recordType-meta.xml
<RecordType>
    <fullName>Fundraising_Goal</fullName>
    <active>true</active>
    <description>Fundraising Goal used by Development</description>
    <label>Fundraising Goal</label>
</RecordType>