force-app/main/default/objects/Campaign/recordTypes/Personal_Touchpoint.recordType-meta.xml
<RecordType>
    <fullName>Personal_Touchpoint</fullName>
    <active>true</active>
    <description>Used for planned personal touchpoint activities</description>
    <label>Personal Touchpoint</label>
</RecordType>