force-app/main/default/objects/Campaign/recordTypes/Principal_Ambassador_Network_Participation.recordType-meta.xml
<RecordType>
    <fullName>Principal_Ambassador_Network_Participation</fullName>
    <active>true</active>
    <description>Used for Principal Ambassador Network (PAN) Participation Campaigns</description>
    <label>Principal Ambassador Network Participation</label>
</RecordType>