force-app/main/default/objects/Campaign/recordTypes/Social_Media_Advertising.recordType-meta.xml
<RecordType>
    <fullName>Social_Media_Advertising</fullName>
    <active>true</active>
    <description>Used for all digital and social media campaigning and advertising.</description>
    <label>Social Media &amp; Advertising</label>
</RecordType>