force-app/main/default/objects/Campaign/listViews/All_Community_Participation_2019.listView-meta.xml
<ListView>
    <fullName>All_Community_Participation_2019</fullName>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Type__c</columns>
    <columns>Categories__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Periods__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Alumni</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>CP_2019</value>
    </filters>
    <label>All Community Participation 2019</label>
</ListView>