force-app/main/default/objects/Campaign/listViews/All_PAN_Campaigns_Active_2018.listView-meta.xml
<ListView>
    <fullName>All_PAN_Campaigns_Active_2018</fullName>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Categories__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Periods__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Principal_Ambassador_Network_Participation</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All PAN Campaigns (Active 2018)</label>
</ListView>