force-app/main/default/objects/Campaign/listViews/All_Personal_Touchpoint_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Personal_Touchpoint_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Personal_Touchpoint</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Personal Touchpoints (Active only)</label>
</ListView>