force-app/main/default/objects/Campaign/listViews/CBA_Campaigns.listView-meta.xml
<ListView>
    <fullName>CBA_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Expression_of_Interest_URL__c</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>2022 CBA</value>
    </filters>
    <label>CBA Campaigns</label>
</ListView>