force-app/main/default/objects/Campaign/listViews/Fundraising_Goals.listView-meta.xml
<ListView>
    <fullName>Fundraising_Goals</fullName>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Funding_Year__c</columns>
    <columns>Target__c</columns>
    <columns>Percentage_Secured__c</columns>
    <columns>Gap_at_Risk__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Fundraising_Goal</value>
    </filters>
    <label>Philanthropy Fundraising Goals</label>
</ListView>