force-app/main/default/objects/Campaign/listViews/Org_Campaign_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Campaign_Hierarchy</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Type__c</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Campaign_Hierarchy</label>
</ListView>